// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`back matches snapshot 1`] = `
<svg
  aria-hidden={true}
  className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1tvxjov-MuiSvgIcon-root"
  data-testid="ArrowBackIosNewOutlinedIcon"
  focusable="false"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  viewBox="0 0 24 24"
>
  <path
    d="M17.77 3.77 16 2 6 12l10 10 1.77-1.77L9.54 12z"
  />
</svg>
`;

exports[`first matches snapshot 1`] = `
<svg
  aria-hidden={true}
  className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1tvxjov-MuiSvgIcon-root"
  data-testid="FirstPageIcon"
  focusable="false"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  viewBox="0 0 24 24"
>
  <path
    d="M18.41 16.59 13.82 12l4.59-4.59L17 6l-6 6 6 6zM6 6h2v12H6z"
  />
</svg>
`;

exports[`forward matches snapshot 1`] = `
<svg
  aria-hidden={true}
  className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1tvxjov-MuiSvgIcon-root"
  data-testid="ArrowForwardIosOutlinedIcon"
  focusable="false"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  viewBox="0 0 24 24"
>
  <path
    d="M6.23 20.23 8 22l10-10L8 2 6.23 3.77 14.46 12z"
  />
</svg>
`;

exports[`hide matches snapshot 1`] = `
<div
  className="barToggle"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <svg
    aria-hidden={true}
    className="MuiSvgIcon-root MuiSvgIcon-colorSuccess MuiSvgIcon-fontSizeMedium css-1ddn8qy-MuiSvgIcon-root"
    data-testid="ToggleOnOutlinedIcon"
    focusable="false"
    onClick={[Function]}
    viewBox="0 0 24 24"
  >
    <path
      d="M17 6H7c-3.31 0-6 2.69-6 6s2.69 6 6 6h10c3.31 0 6-2.69 6-6s-2.69-6-6-6zm0 10H7c-2.21 0-4-1.79-4-4s1.79-4 4-4h10c2.21 0 4 1.79 4 4s-1.79 4-4 4zm0-7c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
    />
  </svg>
</div>
`;

exports[`last matches snapshot 1`] = `
<svg
  aria-hidden={true}
  className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1tvxjov-MuiSvgIcon-root"
  data-testid="LastPageIcon"
  focusable="false"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  viewBox="0 0 24 24"
>
  <path
    d="M5.59 7.41 10.18 12l-4.59 4.59L7 18l6-6-6-6zM16 6h2v12h-2z"
  />
</svg>
`;

exports[`play matches snapshot 1`] = `
<div
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <svg
    aria-hidden={true}
    className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1tvxjov-MuiSvgIcon-root"
    data-testid="PauseOutlinedIcon"
    focusable="false"
    onClick={[Function]}
    viewBox="0 0 24 24"
  >
    <path
      d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"
    />
  </svg>
</div>
`;
